# MulitaMiner

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXPLICACAO_CODIGO.md  LICENSE  Makefile  Modelfile  Modelfile-gemma  OpenVAS_JuiceShop_llama3_20260217_112105.json  OpenVAS_JuiceShop_llama3_20260217_112105.xlsx  OpenVAS_JuiceShop_llama3_20260217_112105_merge_log.txt  OpenVAS_JuiceShop_llama4_20260217_112325.json  OpenVAS_JuiceShop_llama4_20260217_112325.xlsx  OpenVAS_JuiceShop_llama4_20260217_112325_merge_log.txt  README.md  chunk_validator.py  comparativo_extracao.txt  compare_dataset_csv.py  compare_vuln_blocks.py  config.json  convert_example.py  debug_primeiras_linhas_pdfs.txt  docker-compose.dev.yml  docker-compose.yml  extract_pdf_text.py  extract_vuln_blocks.py  ips_extraidos_dos_pdfs.txt  main.py  pdf_extractor_tenablewas.py  pyproject.toml  reports_unicos.txt  requirements.txt  run_checkpoints_2026-02-14T20-16-44.json  setup_dependencies.py  test_tenable.py  visual_layout_extracted_1 - openvas_full-report-998c7fd7-e910-4677-821e-f5a4bbd45116.txt  visual_layout_extracted_1 - tenable_was_WAS_Web_app_scan_Juice_Shop___bWAAP-1-1 - bWAAP.txt  visual_layout_extracted_2 - tenable_was_WAS_Web_app_scan_Juice_Shop___bWAAP-2 - joice shop.txt  visual_layout_extracted_OpenVAS_JuiceShop.txt  (+7 more)
baselines/: OpenVAS_bBWA.xlsx  TenableWAS_JuiceShop.xlsx
data/: README.md  dataset_20260217_103928_03a23595-6644-4700-b976-887defd49a2d.csv  dataset_20260217_131506_5e426f84-d4e1-492c-8b5e-a0fc1cdd1268.xlsx  dataset_20260217_131506_d105fa46-dcc7-4748-8cb2-cff283d61a4a.csv  dataset_20260220_154930_13bb1f00-0099-4c80-b1db-7db5abbd8acb.csv  dataset_20260220_154930_1a187955-5b05-4777-93d7-2c8dd0540a0d.xlsx  (+4 more)
(+475 files in other folders)
